<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/title_settings">
    <ListPreference
        android:dependency="pref_sync_frequency"
        android:key="@string/pref_sync_frequency_key"
        android:title="@string/pref_sync_frequency_title"
        android:dialogTitle="@string/pref_sync_frequency_title"
        android:summary="@string/pref_sync_frequency_title"
        android:entries="@array/pref_sync_frequency_entries"
        android:entryValues="@array/pref_sync_frequency_values"
        android:defaultValue="@string/pref_sync_frequency_default" />
    <EditTextPreference
        android:key="@string/pref_school_class_number_key"
        android:title="@string/pref_school_class_number_title"
        android:dialogTitle="@string/pref_school_class_number_title"
        android:summary="@string/pref_school_class_number_title"
        android:inputType="number"
        />
    <EditTextPreference
        android:key="@string/pref_school_class_letter_key"
        android:title="@string/pref_school_class_letter_title"
        android:dialogTitle="@string/pref_school_class_letter_title"
        android:summary="@string/pref_school_class_letter_title"
        />

</PreferenceScreen>